src/test/deca/context/valid/test_not_valid.deca
// Description:
//    operation not reussie
//
// Resultats:
//    state1 = false
//
// Historique:
//    cree le 01/01/2024

{
   boolean state = true ;
   boolean state1 = (!state);
}
